Adding install in cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,12 @@
-cmake_minimum_required(VERSION 2.8.9)
 project (pid-usage)
-#add_executable(pid-usage.c src/process_args.c src/linux_get_process_info.c)
+cmake_minimum_required(VERSION 2.8.9)
+
+set(EXECUTABLE_OUTPUT_PATH ${pid-usage_SOURCE_DIR})
 add_executable(pid-usage pid_usage.c src/process_args.c src/linux_get_process_info.c)
+
+install(
+    TARGETS
+        pid-usage
+    RUNTIME DESTINATION
+        ${CMAKE_INSTALL_PREFIX}/bin
+)
